src/app/header/styles/_header.scss
#header {
    display: block;
    width: 100%;
    height: 70px;
    @media (max-width: 767px) {
        height: 50px;
    }
    background-color: white;
    position: relative;
    z-index: 2;
    box-shadow: 0px 0px 2px 0px #444;
    .navbar, .container-fluid {
        border: none;
        border-radius: 0;
        margin: 0;
        padding: 0;
        height: 100%;
        width: 100%;
    }   

    .navbar-brand {
        height: 100%;
        width: 100%;
        margin: 0;
        padding: 0;
        @media (min-width: 768px) {
            display: flex;
        }
        @media (max-width: 767px) {
            width: 75%;
        }
        @media (max-width: 450px) {
            width: auto;
        }
        #logo {
            float: left;
            height: 100%;
            padding: 10px;
            img {
                height: 100%;
                max-height: 100%;
            }
        }
        #banner {
            float: left;
            color: $primary-color;
            height: 70px;
            line-height: 70px;
            @media (min-width: 768px) {
                flex: 1;
            }
            @media (max-width: 767px) {
                line-height: 50px;
                width: 80%;
            }
            @media (max-width: 450px) {
                width: auto;
            }
            h1 {
                font-size: 1em;
                font-weight: lighter;
                text-transform: uppercase;
                margin: 0 10px;
                line-height: normal;
                vertical-align: middle;
                display: inline-block;
                letter-spacing: 2px;
                @media (min-width: 1200px) {
                    font-size: 1.2em;
                    line-height: 1.2em;
                }
                @media (max-width: 450px) {
                    display: none;
                    font-size: 0.8em;
                }
            }
        }
    }
}

.navbar-header {
    height: 100%;
    width: 70%;
    @media (max-width: 1200px) {
        width: 60%;
    }
    @media (max-width: 767px) {
        width: 100%;
        .container-fluid > & {
            margin: 0;
        }
    }
    .switch-vue {
        float: right;
        height: 3em;
        width: 3em; 
        padding: 0.7em;
        margin: 4px;
        color: $primary-color;
        @media (min-width: 768px) {
            display: none;
        }
        svg {
            height: 100%;
            width: 100%;
        }
        svg .base {
            fill: $primary-color;
        }
    }
    .navbar-toggle {
        padding: 1em;
        margin: 4px;
        .icon-bar {
            background: $primary-color;
            transition: all 0.2s ease;
            &:nth-child(2) {
                transform: translateY(6px) rotate(45deg);
            }
            &:nth-child(3) {
                transform: rotate(-45deg);
            }
            &:last-child {
                opacity: 0;
            }
        }
        &.collapsed .icon-bar {
            transform: none;
            opacity: 1;
        }
    }
}

.navbar-collapse {
    @media (max-width: 767px) {
        background: white;
        padding: 0;
        width: 100%;
        .container-fluid > & {
             margin: 0;
        }
    }
}

.navbar-nav {
    height: 100%;
    line-height: 70px;
    &.navbar-right {
        margin-right: 0;
    }
    @media (max-width: 767px) {
        margin: 0;
    }
    li {
        line-height: normal;
        a {
            //text-transform: uppercase;
            color: $dark-grey;
            padding-top: 25px;
            padding-bottom: 25px;
            @media (max-width: 992px) {
                padding-left: 10px;
                padding-right: 10px;
            }
            @media (max-width: 767px) {
                padding: 1em 2em;
            }
        }
        .glyphicon, .fa {
            color: inherit;
            font-size: 1.1em;
            line-height: 1.1em;
            cursor: pointer;
        }
        > .glyphicon, > .fa {
            padding: 26px 15px 28px;
        }
        &:hover, &:focus {
            background-color: $light-grey;
            > a, > .glyphicon, > .fa  {
                color: $primary-color;
            }
        }
        .dropdown-menu {
            max-height: 500%;
            overflow: auto;
            a {
                padding-top: 15px;
                padding-bottom: 15px;
            }
        }
        &.favorites .dropdown-menu {
            padding: 0;
        }
    }
}

